Fixing the missing wrap in the menu for long menu entries.

--- a/eform-client/src/scss/styles.scss
+++ b/eform-client/src/scss/styles.scss
@@ -178,3 +178,10 @@ body, .theme-light {
 .advanced-pie-legend .legend-items-container .legend-items {
   overflow: visible !important;
 }
+
+app-navigation mat-tree mat-nested-tree-node mat-accordion mat-expansion-panel mat-tree-node span{
+  white-space: initial;
+  line-height: 1.4em;
+
+}
+
